# ultraplan

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/commands/: README.md  context.md  latest.md  record.md
examples/global-shortcut/: README.md  start-ultraplan.sh
examples/hooks/: README.md  load-recording.py  settings.json.example
src/ultraplan/: __init__.py  __main__.py  cli.py  config.py
src/ultraplan/capture/: __init__.py  audio.py  clipboard.py  keyboard.py  screenshot.py  transcription.py
src/ultraplan/core/: __init__.py  events.py  session.py  timeline.py
src/ultraplan/output/: __init__.py  json_output.py  markdown.py
src/ultraplan/platform/: __init__.py  macos.py
tests/: __init__.py  test_events.py
