[project]
name = "ultraplan"
version = "0.1.0"
description = "CLI tool for recording multi-modal context to generate detailed prompts for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Audio capture and processing
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",  # For WAV file writing

    # Speech-to-text
    "faster-whisper>=1.0.0",

    # Input capture
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",

    # Screenshots
    "mss>=10.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
ultraplan = "ultraplan.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultraplan"]

[tool.ruff]
line-length = 100
target-version = "py311"
