[project]
name = "ultraplan"
version = "0.1.0"
description = "CLI tool for recording multi-modal context to generate detailed prompts for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Definite"}
]
keywords = ["cli", "audio", "whisper", "transcription", "ai", "claude", "context", "recording"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Audio capture and processing
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",  # For WAV file writing

    # Speech-to-text
    "faster-whisper>=1.0.0",

    # Input capture
    "pynput>=1.7.6",
    "pyperclip>=1.9.0",

    # Screenshots
    "mss>=10.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/definite-app/ultraplan"
Repository = "https://github.com/definite-app/ultraplan"
Issues = "https://github.com/definite-app/ultraplan/issues"

[project.scripts]
ultraplan = "ultraplan.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultraplan"]

[tool.ruff]
line-length = 100
target-version = "py311"
